Fixed problem with text on mobile screens

--- a/src/components/portfolio/Portfolio.css
+++ b/src/components/portfolio/Portfolio.css
@@ -137,4 +137,10 @@
     height: 450px;
     margin: 40px;
   }
+
+  .portfolio p,
+  .portfolio_dark p {
+    text-align: center;
+  }
+
 }
